--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -111,7 +111,7 @@ $item-thumbnail-size: 90px
 				top: 1px
 				color: $color-text-hint
 
-			&:first-child, &:nth-child(2)
+			&:first-child
 				padding-left: 0
 				&:before
 					content: ''
