WIP on rewrite the save

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -39,7 +39,7 @@
 	#comments-embed
 
 script.
-	loadComments("{{ url_for('nodes.comments_for_node', node_id=node['_id']) }}");
+	loadComments("{{ url_for('nodes.comments_for_node', node_id=node._id) }}");
 
 	// Markdown initialization
 	var convert = new Markdown.getSanitizingConverter();
