--- a/src/templates/nodes/edit.pug
+++ b/src/templates/nodes/edit.pug
@@ -21,16 +21,21 @@
 
 		.item-edit-header
 			.item-edit-header-action
-				button.cancel(type="submit") Cancel
-				button#item-save.publish() Save
+				a.cancel(href="{{ url_for('nodes.view', node_id=node._id)}}") Cancel
+				a#item-save.publish(
+					href="javascript:void(0);",
+					title="Save changes")
+					i.pi-check
+					| Save Changes
 
 		.item-edit-tab(
 			class="link {% if node.properties.post_type == 'link' %}active{% endif %}")
 			form(
-			id="item-edit-form",
-			method="POST",
-			enctype="multipart/form-data",
-			action="{{url_for('nodes.edit', node_id=node._id)}}")
+				id="item-edit-form",
+				class="{{ node.node_type }}",
+				method="POST",
+				enctype="multipart/form-data",
+				action="{{url_for('nodes.edit', node_id=node._id)}}")
 
 				input.item-title(
 					id="input-item-title",
@@ -52,6 +57,7 @@
 					option Artwork
 
 				input(
+					class="fileupload",
 					id="input-item-file",
 					name="file",
 					type="file")
@@ -63,62 +69,63 @@
 					option(value="link") Link
 					option(value="text") Text
 
-		.item-edit-tab(
-			class="text {% if node.properties.post_type == 'text' %}active{% endif %}")
-			form(
-			id="item-edit-form",
-			method="POST",
-			enctype="multipart/form-data",
-			action="{{ url_for('nodes.edit', node_id=node._id) }}")
+		//- .item-edit-tab(
+		//- 	class="text {% if node.properties.post_type == 'text' %}active{% endif %}")
+		//- 	form(
+		//- 	id="item-edit-form",
+		//- 	method="POST",
+		//- 	enctype="multipart/form-data",
+		//- 	action="{{ url_for('nodes.edit', node_id=node._id) }}")
 
-				input.item-title(
-					id="input-item-title",
-					value="{{ node.name }}",
-					type="text",
-					placeholder="Post Title")
+		//- 		input.item-title(
+		//- 			id="input-item-title",
+		//- 			value="{{ node.name }}",
+		//- 			type="text",
+		//- 			placeholder="Post Title")
 
-				textarea(
-					id="input-item-description",
-					placeholder="Witty description of your post.")
-					| {{ node.properties.content }}
-				a(href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet")
-					| Markdown Cheatsheet
-
-
-				select(
-					id="input-item-category")
-					option Community
-					option Artwork
-
-				input(
-					id="input-item-file",
-					type="file")
-
-				select(
-					id="post_type",
-					class="post_type",
-					name="post_type")
-					option(value="link") Link
-					option(value="text", selected) Text
+		//- 		textarea(
+		//- 			id="input-item-description",
+		//- 			placeholder="Witty description of your post.")
+		//- 			| {{ node.properties.content }}
+		//- 		a(href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet")
+		//- 			| Markdown Cheatsheet
 
 
-		hr
-		.item-edit-stuff
+		//- 		select(
+		//- 			id="input-item-category")
+		//- 			option Community
+		//- 			option Artwork
 
-			| {% for field in form %}
+		//- 		input(
+		//- 			id="input-item-file",
+		//- 			type="file")
 
-			| {% if field.name == 'csrf_token' %}
-			| {{ field }}
-			| {% elif field.type == 'HiddenField' %}
-			| {{ field }}
-			| {% else %}
+		//- 		select(
+		//- 			id="post_type",
+		//- 			class="post_type",
+		//- 			name="post_type")
+		//- 			option(value="link") Link
+		//- 			option(value="text", selected) Text
 
-			| {% if field.name == 'post_type' %}
-			| {{ field.name | undertitle }} {{ field }}
-			| {% endif %}
 
-			| {% endif %}
-			| {% endfor %}
+		//- hr
+		//- .item-edit-stuff
+
+		//- 	| {% for field in form %}
+
+		//- 	| {% if field.name == 'csrf_token' %}
+		//- 	| {{ field }}
+		//- 	| {% elif field.type == 'HiddenField' %}
+		//- 	| {{ field }}
+		//- 	| {% else %}
+
+		//- 	| {% if field.name == 'post_type' %}
+		//- 	| {{ field.name | undertitle }} {{ field }}
+		//- 	| {% endif %}
+
+		//- 	| {% endif %}
+		//- 	| {% endfor %}
+
 
 #col_right.listing-view.item-edit-view
 	.item-media
@@ -150,9 +157,15 @@
 	.item-body#item-description
 		| {{ node.description | safe }}
 	| {% endif %}
+
 | {% endblock body %}
 
 | {% block footer_scripts %}
+script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery.ui.widget.min.js') }}")
+script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery.iframe-transport.min.js') }}")
+script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery.fileupload.min.js') }}")
+script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery.select2.min.js') }}")
+script(src="{{ url_for('static_pillar', filename='assets/js/file_upload.min.js') }}")
 script.
 	// Markdown initialization
 	var convert = new Markdown.getSanitizingConverter();
@@ -182,6 +195,12 @@ script.
 			);
 		}).trigger('keyup');
 
+		$('input, textarea').keypress(function () {
+			// Set the beforeunload to warn the user of unsaved changes
+			$(window).on('beforeunload', function () {
+				return 'You have unsaved changes in your post.';
+			});
+		});
 
 		/* Resize textareas */
 		item_description_input
@@ -189,22 +208,36 @@ script.
 			.blur();
 	});
 
+
+	$("#item-save").unbind( "click" );
+
 	/* Submit changes */
 	$("#item-edit-form").unbind("submit").submit(function(e) {
 		e.preventDefault();
+
+		/* Let us know started saving */
+		$("#item-save").html('<i class="pi-spin spin"></i> Saving...');
 
 		$.ajax({
 			url: "{{url_for('nodes.edit', node_id=node._id)}}",
 			data: $(this).serialize(),
 			type: 'POST'
-		});
+		})
+		.fail(function(xhr){
+			/* Something went wrong, print it */
+			setMessage(xhr);
+		})
+		.done(function(dataHtml){
+			// Disable beforeunolad when submitting a form
+			$(window).off('beforeunload');
 
-		console.log($(this).serialize());
+			//- location.href = "{{ url_for('nodes.view', node_id=node._id)}}";
+			$("#item-save").html('<i class="pi-check"></i> Save Again');
+		});
 	});
 
 	$('#item-save').click(function(e){
 		e.preventDefault();
-		console.log('something');
 		$("#item-edit-form").submit();
 	});
 
