Complete post rating workflow
After rating now reindex the node. When loading search, we update/remove from local storage all posts.

--- a/src/templates/dillo/search.pug
+++ b/src/templates/dillo/search.pug
@@ -101,7 +101,8 @@ script.
 
 
 	function processHit(hit) {
-		hit.is_positive = localStorage.getItem(hit.objectID);
+		var key = 'dillo_' + hit.objectID;
+		hit.is_positive = localStorage.getItem(key);
 
 		if (hit.is_positive && hit.is_positive === 'true') {
 			hit.is_positive = 'positive';
