More work in progress in edit post

--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -3,6 +3,7 @@
 $font-body: 'Open Sans', Verdana, Arial, Helvetica, sans-serif
 $font-headings: 'Oxygen', 'Lucida Sans', 'Lucida Grande', sans-serif
 $font-size: 16px
+$font-size-smaller: 10px
 $font-size-small: 12px
 $font-size-large: 18px
 $font-size-extra-large: 22px
