--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -15,6 +15,7 @@
 	.item-details
 		a#item-title.item-title(href="") {{ node.name }}
 		ul
+			li {{ node.properties.post_type | undertitle }}
 			li {{ node.properties.category | undertitle }}
 			li {{ node._created | pretty_date }}
 			li {{ node.user.full_name }}
@@ -32,7 +33,7 @@
 
 | {% if node.properties.post_type == 'text' %}
 .item-body#item-description
-	| {{ node.description | safe }}
+	| {{ node.properties.content_html | safe }}
 | {% endif %}
 
 #item-comments
@@ -47,8 +48,14 @@ script.
 	convert = convert.makeHtml;
 
 	// Convert Markdown and emojis for text and title
-	var desc = $('#item-description').text();
-	$('#item-description').html(twemoji.parse(convert(desc)));
+	var $content = $('#item-description');
+	$content.html(
+		twemoji.parse(
+			convert(
+				$content.text()
+			)
+		)
+	);
 	$('#item-title').html(twemoji.parse('{{ node.name }}'));
 
 	{% if node.properties.post_type == 'link' %}
