--- a/src/templates/dillo/search.pug
+++ b/src/templates/dillo/search.pug
@@ -86,7 +86,7 @@ script.
 							'<li><a href="">Tutorials</a></li>' +
 							'<li><a href="">{{ created }}</a></li>' +
 							'<li>{{ user.full_name }}</li>' +
-							'<li><a href="{{ link_url }}">2 comments</a></li>' +
+							'<li><a href="{{ link_url }}">{{{ comments_count }}} comments</a></li>' +
 							'{{#is_link}}<li>{{ link_short }}</li>{{/is_link}}' +
 						'</ul>' +
 					'</div>' +
