Edit: Introducing Image Upload
And the logic for switching types

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -194,6 +194,21 @@ $item-thumbnail-size: 90px
 				visibility: hidden
 				display: none
 
+			.form-upload-file
+				padding: 10px 5px
+
+			.input-content
+				display: flex
+				flex-direction: column
+
+				input, textarea
+					display: none
+					visibility: hidden
+
+				&.active input, textarea
+					display: block
+					visibility: visible
+
 	&-view
 
 	&-tabs
