--- a/src/templates/dillo/search.pug
+++ b/src/templates/dillo/search.pug
@@ -86,7 +86,7 @@ script.
 								'{{^is_link}}<i class="pi-document-text"></i>{{/is_link}}' +
 								'</a>' +
 							'</li>' +
-							'<li><a href="">Tutorials</a></li>' +
+							'<li><a href="">{{ category }}</a></li>' +
 							'<li><a href="">{{ created }}</a></li>' +
 							'<li>{{ user.full_name }}</li>' +
 							'<li><a href="{{ link_url }}">{{{ comments_count }}} comments</a></li>' +
