Escape name and comments_count

--- a/src/templates/dillo/search.pug
+++ b/src/templates/dillo/search.pug
@@ -67,7 +67,7 @@ script.
 						'</div>' +
 					'</div>' +
 					'<div class="item-details">' +
-						'<a href="" class="item-title">{{{ name }}}</a>' +
+						'<a href="" class="item-title">{{ name }}</a>' +
 						'<ul>' +
 							'<li>' +
 								'<a href="{{ link_url }}">' +
@@ -78,7 +78,7 @@ script.
 							'<li><a href="">{{ category }}</a></li>' +
 							'<li><a href="">{{ created }}</a></li>' +
 							'<li>{{ user.full_name }}</li>' +
-							'<li><a href="{{ link_url }}">{{{ comments_count }}} comments</a></li>' +
+							'<li><a href="{{ link_url }}">{{ comments_count }} comments</a></li>' +
 							'{{#is_link}}<li>{{ link_short }}</li>{{/is_link}}' +
 						'</ul>' +
 					'</div>' +
