Tweaks to visibility of link field in edit form

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -246,7 +246,7 @@ $item-thumbnail-size: 90px
 
 	&-tab
 		&.link
-			#content
-				visibility: hidden
-				display: none
+			.input-content.link input
+				visibility: visible
+				display: block
 
