Add value of link to the edit field

--- a/src/templates/nodes/edit.pug
+++ b/src/templates/nodes/edit.pug
@@ -57,7 +57,9 @@
 						name="content",
 						type="text",
 						class="input-field",
-						placeholder="Paste or type the URL here")
+						placeholder="Paste or type the URL here",
+						value="{{ node.properties.content }}")
+
 
 				.input-content.text
 					textarea(
