--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -15,6 +15,9 @@
 	min-height: 280px
 	background-color: $color-background-dark
 
+	iframe
+		max-width: 100%
+
 $item-thumbnail-size: 90px
 .item-thumbnail
 	position: relative
