View: Use post image if any
Needs to check for embed on links

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -1,5 +1,7 @@
 .item-media
-	i.pi-play
+	| {% if node.picture %}
+	img(src="{{ node.picture.thumbnail('l', api=api) }}")
+	| {% endif %}
 
 .item-content(
 	id="{{ node._id }}",
