--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -11,11 +11,9 @@
 	display: flex
 	align-items: center
 	justify-content: center
-	font-size: 3em
-	min-height: 280px
 	background-color: $color-background-dark
 
-	iframe
+	iframe, img
 		max-width: 100%
 
 $item-thumbnail-size: 90px
